[style] fix visibility icons too small #92

--- a/app/assets/stylesheets/main_backoffice.scss
+++ b/app/assets/stylesheets/main_backoffice.scss
@@ -365,7 +365,9 @@ details {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  font-size: 120%;
   span.text {
+    display: none;
     font-size: 60%;
     // line-height: 60%;
     // margin-top: -1ex;
